--- a/app/views/accounts/create.html.erb
+++ b/app/views/accounts/create.html.erb
@@ -1,5 +1,5 @@
 <h1>Account#create</h1>
-<% form_for :user, @user, :url => {:controller => 'account', :action => 'create'} do |f| %>
+<% form_for :user, @user, :url => {:controller => 'accounts', :action => 'create'} do |f| %>
 	<span class="error" style="text-align: center; margin: auto;">
 		<%= error_messages_for 'user', :header_message => "Please Try Again!", :message => "There were the following errors when trying to create your account" %>
 	</span>
