--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,5 +1,8 @@
 <h1>News#index</h1>
 <p>Find me in app/views/news/index.html.erb</p>
+<% if User.current %>
+	<%= User.current.loggedin? %>
+<% end %>
 <% @news.each do |n| %>
   <table class="news_table">
     <tr>
