Work on navigation generation, current_party now a part of the Party model

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
           Powered by <a href="http://lanrails.jonnyfunfun.com/" target="_blank">LANRails</a>, Open-source LAN Party Management: Rails Style!<br/>
           Copyright &copy; 2009: Jonathan Enzinna.  Licensed under the GNU/GPL.<br/>
           <a href="http://lanrails.jonnyfunfun.com/" target="_blank">
-            <img src="/images/lanrails.png" border="0" alt="Powered by LANRails"/>
+            <img src="/images/lanrails.png" border="0" alt="Powered by LANRails" style="margin-top: 4px;"/>
           </a>
         </div>
 	</body>
