--- a/app/views/widgets/_login_box.html.erb
+++ b/app/views/widgets/_login_box.html.erb
@@ -2,11 +2,10 @@
   <% form_tag(login_path, :class => 'login_form') do %>
     <b>Username:</b><br/><%= text_field nil, :username, :class => 'login_input login_username_box' %><br />
     <b>Password:</b><br/><%= password_field nil, :password, :class => 'login_input login_password_box' %><br />
-    <span>
-      <%= submit_tag 'Login', :class => 'login_button' %>
+      <%= submit_tag 'Login', :class => 'float_left login_button' %>
     <% end %>
-    <%= button_to 'Register', new_account_path, :method => :get, :class => 'register_button' %>
-  </span>
+    <%= button_to 'Register', new_account_path, :method => :get, :class => 'float_left register_button' %>
+	<div class="break"></div>
 <% else %>
   Welcome back <b><%= User.current.username %></b>!<br/>
   <%= link_to 'Profile', edit_account_path %>
