--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -10,14 +10,15 @@ body {
     background: #a3919f url('../images/default/background.jpg') top left repeat-x;
     margin: 0;
     padding: 0;
-	color: white;
-	font-family: Helvetica, Courier New, Courier, Arial;
+    color: white;
+    font-family: Helvetica, Courier New, Courier, Arial;
+    font-size: 12px;
 }
 
 h1, h2, h3, h4, h5, h6 {
-	color: #74D4FF;
-	margin: 0;
-	padding: 0;
+    color: #74D4FF;
+    margin: 0;
+    padding: 0;
 }
 
 hr {
@@ -26,8 +27,8 @@ hr {
 }
 
 a {
-	color: #74D4FF;
-	text-decoration: underline;
+    color: #74D4FF;
+    text-decoration: underline;
 }
 
 #header {
@@ -45,7 +46,7 @@ a {
     padding-bottom: 5px;
     padding-top: 10px;
     background: transparent url('../images/default/topnav.gif') left no-repeat;
-	text-align: center;
+    text-align: center;
 }
 
 #main_nav li {
@@ -53,25 +54,25 @@ a {
     padding-right: 32px;
     font-size: 22px;
     height: 45px;
-	margin: 0;
+    margin: 0;
 }
 
 #main_nav ul {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 #main_nav li:first-child {
-	padding-left: 24px;
+    padding-left: 24px;
 }
 
 #main_nav a {
-	text-decoration: none;
+    text-decoration: none;
 }
 
 #main_nav a:hover {
-	color: #DDF5FF;
-	text-decoration: underline;
+    color: #DDF5FF;
+    text-decoration: underline;
 }
 
 #main {
@@ -84,7 +85,7 @@ a {
     width: 154px;
     padding-left: 2px;
     padding-right: 2px;
-	padding-top: 10px;
+    padding-top: 10px;
     border-right: 1px dashed white;
 }
 
