--- a/app/views/widgets/_top_navigation.html.erb
+++ b/app/views/widgets/_top_navigation.html.erb
@@ -2,7 +2,7 @@
 	<li><%= link_to 'Home', root_path %></li>
 	<li><%= link_to 'About' %></li>
 	<% if Party.current_party then %>
-		<li><%= link_to 'Register', party_registrations_path %></li>
+		<li><%= link_to 'Register', party_registrations_path(:party_id => Party.current_party.id) %></li>
 	<% end %>
 	<li><%= link_to 'Forums', forums_path %></li>
 	<li><%= link_to 'Staff', staff_path %></li>
