Various changes and fixes, updated will_paginate plugin, prep for savage_beast forum plugin branch

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,8 @@
             <%= render :partial => 'widgets/left_navigation' %>
           </div>
           <div id="main_body" class="float_left">
+            <%= content_tag 'p', h(flash[:notice]), :class => 'notice' if flash[:notice] %>
+            <%= content_tag 'p', h(flash[:error]), :class => 'notice error' if flash[:error] %>
             <%= yield -%>
           </div>
           <div class="break"></div>
