--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,18 +1,13 @@
-<h1>News#index</h1>
-<p>Find me in app/views/news/index.html.erb</p>
-<% if User.current %>
-	<%= User.current.loggedin? %>
-<% end %>
-<% @news.each do |n| %>
+ <% @news.each do |n| %>
   <table class="news_table">
     <tr>
-      <th><%= link_to n.title, news_article_url(n) %>
+      <th class="news_title"><%= link_to n.title, news_url(n) %>
     </tr>
     <tr>
-      <td><%= n.body %></td>
+      <td class="news_body"><%= n.body %></td>
     </tr>
     <tr>
-      <td>Posted at <%= n.created_at %> by <%= n.user.username %></td>
+      <td class="news_footer">Posted at <%= n.created_at %> by <%= n.user.username %></td>
     </tr>
   </table>
 <% end %>
