--- a/app/views/widgets/_top_navigation.html.erb
+++ b/app/views/widgets/_top_navigation.html.erb
@@ -6,6 +6,7 @@
 	<% end %>
 	<li><%= link_to 'Forums', forums_path %></li>
 	<li><%= link_to 'Staff', staff_path %></li>
+	<li><%= link_to 'Sponsors', sponsors_path %></li>
 	<% if User.current && User.current.loggedin? then %>
 		<li><%= link_to 'My Profile', edit_account_path %></li>
 	<% elsif not Party.current_party %>
