--- a/app/views/party/show.html.erb
+++ b/app/views/party/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @party.name %></h1>
-<ul class="menu">
+<ul class="inline_menu">
   <li><%= link_to 'Register/Attendees', party_registrations_path %></li>
   <li><%= link_to 'Tournaments', party_tournaments_path %></li>
   <li><%= link_to 'Prizes/Swag', party_prizes_path %></li>
