--- a/app/views/sponsors/index.html.erb
+++ b/app/views/sponsors/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Sponsors#index</h1>
-<p>Find me in app/views/sponsors/index.html.erb</p>
+<h1>Our Sponsors</h1>
+<% @sponsors.each do |s| %>
+  <% link_to s.url do %>
+    <%= s.public_image_tag %>
+  <% end %>
+<% end %>
