--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -1,4 +1,20 @@
 <h1>Edit My Profile</h1>
 <% form_for @user, :url => {:controller => 'accounts', :action => 'update'} do |f| %>
+  <table width="75%" align="center" border="0" cellpadding="0" cellspacing="1">
+    <tr>
+      <td><b>Username:</b></td>
+      <td><%= @user.username %></td>
+    </tr>
+    <tr>
+      <td><b>Email:</b></td>
+      <td><%= @user.email %></td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <b>Bio:</b><br/>
+        <%= f.text_area :bio, :size => "65x10",:class => "mceEditor" %>
+      </td>
+    </tr>
+  </table>
   <br/><div class="center"><%= f.submit 'Save Changes' %></div>
 <% end %>
